Geometry Node Scene Time Causes Graph Update Even When Deleted #100308

Closed
opened 2022-08-10 01:58:30 +02:00 by Brady Johnston · 6 comments

System Information
Operating system:
Windows 11
Graphics card:
NVIDIA GeForce RTX 3090

Blender Version
Broken: Tested both 3.3.0 and 3.2.1

When the 'Scene Time' node is added to a geometry node tree, the tree is executed each time the frame changes. When this node is deleted, the node tree is still executed each time the frame changes until you move do something with the object that causes it to refresh.

Exact steps for others to reproduce the error
Create a geometry node tree that does not contain a "Scene Time" node. The timings don't change as the node node tree is not re-exectued. Add a "Scene Time" node and the node tree is now re-executed, even when the node is not plugged in. Delete the "Scene Time" node and the node tree is still re-exectued on playback. Doing something to the object like duplicating it will refresh the object and the node tree is no longer re-exectued without the "Scene Time" node.

0001-0522-1.webm

**System Information** Operating system: Windows 11 Graphics card: NVIDIA GeForce RTX 3090 **Blender Version** Broken: Tested both 3.3.0 and 3.2.1 When the 'Scene Time' node is added to a geometry node tree, the tree is executed each time the frame changes. When this node is deleted, the node tree is still executed each time the frame changes until you move do something with the object that causes it to refresh. **Exact steps for others to reproduce the error** Create a geometry node tree that does not contain a "Scene Time" node. The timings don't change as the node node tree is not re-exectued. Add a "Scene Time" node and the node tree is now re-executed, even when the node is not plugged in. Delete the "Scene Time" node and the node tree is still re-exectued on playback. Doing something to the object like duplicating it will refresh the object and the node tree is no longer re-exectued without the "Scene Time" node. [0001-0522-1.webm](https://archive.blender.org/developer/F13351369/0001-0522-1.webm)
Author

Added subscriber: @bunchofbradys

Added subscriber: @bunchofbradys

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2022-08-10 02:07:32 +02:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

The error is wider. DEG_relations_tag_update causes updates. And is not deleted when the last node of this type is deleted.

The error is wider. `DEG_relations_tag_update` causes updates. And is not deleted when the last node of this type is deleted.

This issue was referenced by bdb85bdd98

This issue was referenced by bdb85bdd9813d0162de775b9f265795da0a3fc67
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100308
No description provided.