Fix T100308: Removing scene time node does not update relations

Similar to the fix in 734c6a4405f21078270e71.